# mnist-classification

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
mnist_classification/: __init__.py  config.py  dataset.py  features.py  plots.py
mnist_classification/modeling/: predict.py  train.py
models/: model_sgdclassifier_digit_5.joblib  sgd_classifier_digit_8.joblib  sgd_digit_5.joblib
notebooks/: 1_eda.ipynb
reports/artifacts/: RandomForestClassifier_pr_curve_digit_5.joblib  metrics_SGDClassifier_digit_5.json  metrics_digit_5.json  metrics_digit_8.json  metrics_sgdclassifier_digit_5.json  pr_curve_5.joblib  pr_curve_digit_8.joblib  pr_curve_sgdclassifier_digit_5.joblib
